[Add] tipos usuarios entity