@@ -1,7 +1,6 @@
 package com.example.microserviciogestionusuarios.security;
 
-import java.util.List;
-
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
@@ -9,32 +8,49 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
+
+import com.example.microserviciogestionusuarios.security.jwt.JwtEntryPoint;
+// import com.example.microserviciogestionusuarios.security.jwt.JwtTokenFilter;
+import com.example.microserviciogestionusuarios.security.jwt.JwtTokenFilter;
+
+import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableGlobalMethodSecurity(prePostEnabled = true)
 public class MainSecurity {
- 
+
+    @Autowired
+    public JwtEntryPoint jwtEntryPoint;
+
     @Bean
-    SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http.cors().configurationSource(request ->{
+    public JwtTokenFilter jwtTokenFilter() {
+        return new JwtTokenFilter();
+    }
+
+    @Bean
+    SecurityFilterChain filterChain(HttpSecurity http) throws Exception{
+        http.cors().configurationSource( request -> {
             CorsConfiguration corsConfiguration = new CorsConfiguration();
-            corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200"));
+            corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
             corsConfiguration.setAllowedMethods(List.of("HEAD","GET","POST","PUT","DELETE"));
             corsConfiguration.setAllowCredentials(true);
             corsConfiguration.addExposedHeader("Message");
-            corsConfiguration.setAllowedHeaders(List.of("Authorization","Content-Type","Cache-Control"));
+            corsConfiguration.setAllowedHeaders(List.of("Authorization","Cache-control", "Content-Type"));
             return corsConfiguration;
-
-        }).and()
-        .csrf().disable()
-        .authorizeRequests()
-        .requestMatchers("/auth/**").permitAll()
-        .anyRequest().authenticated()
-        .and()
-        .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS);
-
+        }).and().csrf().disable()
+                .authorizeRequests()
+                .requestMatchers("/auth/sign-up",
+                        "/auth/sign-in")
+                .permitAll()
+                .anyRequest().authenticated()
+                .and().exceptionHandling().authenticationEntryPoint(jwtEntryPoint)
+                .and()
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS);
+        http.addFilterBefore(jwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 }
